// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render modal 1`] = `
<Modal
  contentLabel="users.update"
  onRequestClose={[Function]}
>
  <header
    className="modal-head"
  >
    <h2>
      users.update
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <DeferredSpinner
      loading={true}
      timeout={100}
    >
      <SelectList
        elements={Array []}
        onSearch={[Function]}
        onSelect={[Function]}
        onUnselect={[Function]}
        renderElement={[Function]}
        selectedElements={Array []}
      />
    </DeferredSpinner>
  </div>
  <footer
    className="modal-foot"
  >
    <ResetButtonLink
      onClick={[Function]}
    >
      Done
    </ResetButtonLink>
  </footer>
</Modal>
`;

exports[`should render modal 2`] = `
<Modal
  contentLabel="users.update"
  onRequestClose={[Function]}
>
  <header
    className="modal-head"
  >
    <h2>
      users.update
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <DeferredSpinner
      loading={false}
      timeout={100}
    >
      <SelectList
        elements={
          Array [
            "foo",
          ]
        }
        onSearch={[Function]}
        onSelect={[Function]}
        onUnselect={[Function]}
        renderElement={[Function]}
        selectedElements={
          Array [
            "foo",
          ]
        }
      />
    </DeferredSpinner>
  </div>
  <footer
    className="modal-foot"
  >
    <ResetButtonLink
      onClick={[Function]}
    >
      Done
    </ResetButtonLink>
  </footer>
</Modal>
`;
